# pdf_comp_diff

./: .gitignore  README.md  _peek.py  config.toml  pyproject.toml
api/: README.md  __init__.py  main.py
specdiff/: __init__.py  cli.py  config.py  diffengine.py  engine.py  extract.py  figures.py  formparser.py  models.py  report.py  segment.py  tables.py
tests/: __init__.py  conftest.py  test_diffengine.py  test_engine.py  test_extract.py  test_segment.py
